--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 // the adapter you are using
                 chatJsContentPath: '/Chatjs/',
                 //adapter: new SignalRAdapter({chatHubName: "Lilu"})
-                adapter: new QorChatAdapter("athom@126.com")
+                adapter: new QorChatAdapter()
 //                adapter: new DemoAdapter()
             });
         });
